--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -51,22 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml = sml.MLContext(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function systemml.mlcontext.dml>"
+       "<bound method MLContext.version of MLContext>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sml.dml"
+    "ml.version"
    ]
   }
  ],
